--- a/source/stylesheets/index.scss
+++ b/source/stylesheets/index.scss
@@ -34,4 +34,4 @@
 @import 'partials/blog', 'partials/benefits';
 
 // 8. Themes
-@import 'themes/default', 'themes/print';
+@import 'themes/dark', 'themes/print';
