--- a/source/stylesheets/abstracts/_config.scss
+++ b/source/stylesheets/abstracts/_config.scss
@@ -95,15 +95,6 @@ $modularscale: (
 /// @require {function} palette
 /// @todo Customize the colors or add new ones to match your design needs.
 $palette: (
-  'blue': (
-    '110': rgb(0, 71, 222),
-    'base': rgb(0, 79, 247),
-    '80%': rgb(51, 114, 249),
-    '60%': rgb(102, 149, 250),
-    '30%': rgb(178, 202, 253),
-    '10%': rgb(229, 237, 254),
-    '5%': rgb(242, 246, 255),
-  ),
   'orange': (
     '110%': rgb(222, 151, 0),
     'base': rgb(247, 168, 0),
@@ -112,6 +103,15 @@ $palette: (
     '30%': rgb(253, 229, 178),
     '10%': rgb(254, 246, 229),
     '5%': rgb(255, 251, 242),
+  ),
+  'blue': (
+    '110': rgb(0, 71, 222),
+    'base': rgb(0, 79, 247),
+    '80%': rgb(51, 114, 249),
+    '60%': rgb(102, 149, 250),
+    '30%': rgb(178, 202, 253),
+    '10%': rgb(229, 237, 254),
+    '5%': rgb(242, 246, 255),
   ),
   'gray': (
     '110%': rgb(46, 46, 46),
@@ -122,6 +122,36 @@ $palette: (
     '10%': rgb(235, 235, 235),
     '5%': rgb(245, 245, 245),
   ),
+  'white': (
+    'base': rgb(255, 255, 255),
+  ),
+  'black': rgb(0, 0, 0),
+  'anchor': (
+    'base': rgb(51, 51, 51),
+    'link': rgb(51, 51, 51),
+    'visited': rgb(51, 51, 51),
+    'hover': rgb(222, 151, 0),
+    'focus': rgb(249, 185, 51),
+    'active': rgb(222, 151, 0),
+  ),
+  'anchor-dark': (
+    'base': rgb(253, 229, 178),
+    'link': rgb(253, 229, 178),
+    'visited': rgb(253, 229, 178),
+    'hover': rgb(253, 229, 178),
+    'focus': rgb(253, 229, 178),
+    'active': rgb(253, 229, 178),
+  ),
+  'menu': (
+    'base': rgb(255, 255, 255),
+    'text': rgb(20, 20, 20),
+    'border': rgb(230, 230, 230),
+    'sub-menu': rgb(241, 241, 241),
+    'sub-menu-text': rgb(29, 29, 29),
+    'sub-menu-hover': rgb(51, 51, 51),
+    'anchor': rgb(247, 168, 0),
+    'shadow': rgba(0, 0, 0, 0.74),
+  ),
   'menu-dark': (
     'base': rgb(20, 20, 20),
     'text': rgb(202, 202, 202),
@@ -131,13 +161,10 @@ $palette: (
     'sub-menu-hover': rgb(51, 51, 51),
     'anchor': rgb(247, 168, 0),
   ),
-  'menu-light': (
+  'footer': (
     'base': rgb(255, 255, 255),
     'text': rgb(20, 20, 20),
     'border': rgb(230, 230, 230),
-    'sub-menu': rgb(241, 241, 241),
-    'sub-menu-text': rgb(29, 29, 29),
-    'sub-menu-hover': rgb(51, 51, 51),
     'anchor': rgb(247, 168, 0),
   ),
   'footer-dark': (
@@ -146,34 +173,41 @@ $palette: (
     'border': rgb(51, 51, 51),
     'anchor': rgb(247, 168, 0),
   ),
-  'footer-light': (
-    'base': rgb(255, 255, 255),
-    'text': rgb(20, 20, 20),
-    'border': rgb(230, 230, 230),
-    'anchor': rgb(247, 168, 0),
-  ),
-  'white': rgb(255, 255, 255),
-  'black': rgb(0, 0, 0),
   'debug': rgb(255, 0, 0),
   'warning': rgb(255, 190, 0),
-  'anchor': (
-    'base': rgb(247, 168, 0),
-    'link': rgb(0, 102, 204),
-    'visited': rgb(128, 0, 128),
-    'hover': rgb(50, 152, 255),
-    'focus': rgb(50, 152, 255),
-    'active': rgb(229, 0, 80),
-  ),
   'border': (
     'base': rgb(192, 192, 192),
     'focus': rgb(0, 0, 0),
   ),
   'button': (
-    'base': rgb(225, 225, 225),
-    'focus': rgb(229, 241, 251),
-    'slider': hsl(0, 0%, 40%),
-    'submit': rgb(217, 83, 79),
-    'reset': transparent,
+    'base': rgb(247, 168, 0),
+    'focus': rgb(222, 151, 0),
+    'disabled': rgb(250, 203, 102),
+  ),
+  'button-inverted': (
+    'base': rgb(253, 229, 178),
+    'focus': rgb(250, 203, 102),
+    'disabled': rgb(254, 246, 229),
+  ),
+  'button-secondary': (
+    'base': rgb(0, 79, 247),
+    'focus': rgb(0, 71, 222),
+    'disabled': rgb(102, 149, 250),
+  ),
+  'button-secondary-inverted': (
+    'base': rgb(178, 202, 253),
+    'focus': rgb(102, 149, 250),
+    'disabled': rgb(229, 237, 254),
+  ),
+  'button-neutral': (
+    'base': rgb(51, 51, 51),
+    'focus': rgb(46, 46, 46),
+    'disabled': rgb(133, 133, 133),
+  ),
+  'button-neutral-inverted': (
+    'base': rgb(255, 254, 252),
+    'focus': rgb(255, 254, 252),
+    'disabled': rgb(194, 194, 194),
   ),
   'disabled': (
     'foreground': hsl(0, 0%, 42%),
@@ -216,12 +250,6 @@ $palette: (
   ),
   'text-dark': (
     'base': rgb(229, 231, 234),
-  ),
-  'text-light': (
-    'base': hsl(0, 0%, 13%),
-  ),
-  'menu': (
-    'shadow': rgba(0, 0, 0, 0.74),
   ),
   'shadow': (
     'inverse': rgba(255, 255, 255, 0.25),
