--- a/source/stylesheets/components/_slider.scss
+++ b/source/stylesheets/components/_slider.scss
@@ -119,7 +119,7 @@
 
   @include range-thumb($height: 1.5rem, $track-height: 0.125rem) {
     // stylelint-disable-next-line mixins-before-declarations
-    background-color: palette('button', 'slider');
+    background-color: palette('button');
 
     border: 0;
   }
