--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -45,8 +45,8 @@
               {{ end }}
 
               <div class="rich-text">
-                <a href="/blog/{{ .Params.slug }}">
-                  <h2>
+                <a href="/blog/{{ .Params.slug }}" class="text-decor--none">
+                  <h2 >
                     {{ .Title }}
                   </h2>
                 </a>
