--- a/layouts/partials/global-citizen.html
+++ b/layouts/partials/global-citizen.html
@@ -7,7 +7,7 @@
     <h2 class="title-section">{{ .title }} </h2>
     {{ end }}
 
-    <div class="two-columns">
+    <div class="two-columns align-items--center">
       <div>
         {{ if .content }}
         <div class="rich-text">
