--- a/source/stylesheets/base/_base.scss
+++ b/source/stylesheets/base/_base.scss
@@ -489,6 +489,10 @@ a {
 
 }
 
+.text-decor--none {
+  text-decoration: none;
+}
+
 
 /* Contact info and addresses
 ---------------------------------------------------------------------------- */
