--- a/source/stylesheets/base/_helpers.scss
+++ b/source/stylesheets/base/_helpers.scss
@@ -211,6 +211,41 @@ textarea {
   }
 }
 
+.four-columns {
+  display: grid;
+  /* stylelint-disable-next-line property-no-unknown */
+
+  grid-template-rows: auto;
+
+  width: 100%;
+
+  row-gap: to-rem(24px);
+
+  @media screen and (min-width: breakpoint('tablet__portrait')) {
+    grid-template-columns: 1fr 1fr;
+
+    column-gap: to-rem(24px);
+
+    row-gap: to-rem(32px);
+  }
+
+  @media screen and (min-width: breakpoint('desktop')) {
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+
+    column-gap: to-rem(24px);
+
+    row-gap: to-rem(32px);
+  }
+}
+
 .color-white {
   color: palette('white');
+}
+
+.align-items--center {
+  align-items: center;
+}
+
+.text-decoration--none {
+  text-decoration: none;
 }
