--- a/layouts/index.html
+++ b/layouts/index.html
@@ -12,7 +12,8 @@
     <main role="main" id="conteudo" class="page">
       {{ partial "global-citizen.html" . }}
       {{ partial "benefits.html" . }}
-      {{ partial "testimonials.html" . }}
+      <!-- {{ partial "destinations.html" . }} -->
+      <!-- {{ partial "testimonials.html" . }} -->
       {{ partial "high-school.html" . }}
       {{ partial "blog.html" . }}
     </main>
