--- a/layouts/partials/high-school.html
+++ b/layouts/partials/high-school.html
@@ -7,13 +7,7 @@
     <h2 class="title-section">{{ .title }} </h2>
     {{ end }}
 
-    <div class="two-columns">
-      <div class="rich-text">
-        <p>{{ .content }}</p>
-        {{ if .buttonUrl }}
-          <a href="{{.buttonUrl}}" class="btn">{{ .buttonText }}</a>
-        {{ end }}
-      </div>
+    <div class="two-columns align-items--center">
       {{ if .image }}
 
       <div class="image">
@@ -21,6 +15,12 @@
 
       </div>
       {{ end }}
+      <div class="rich-text">
+        <p>{{ .content }}</p>
+        {{ if .buttonUrl }}
+        <a href="{{.buttonUrl}}" class="btn">{{ .buttonText }}</a>
+        {{ end }}
+      </div>
     </div>
   </div>
 </section>
