feat: add text center oon blog title

--- a/source/stylesheets/partials/_blog.scss
+++ b/source/stylesheets/partials/_blog.scss
@@ -97,6 +97,10 @@
   }
 }
 
+.post__title{
+  text-align: center;
+}
+
 .blog-wrap {
   display: grid;
 
@@ -114,6 +118,7 @@
     width: 100%;
   }
 }
+
 
 .sidebar-title {
   margin-bottom: 18px;
