--- a/layouts/partials/destinations.html
+++ b/layouts/partials/destinations.html
@@ -11,7 +11,7 @@
       <div>
         {{ if .image }}
 
-        <img src="{{ .image }}" alt="{{ .title }}">
+        <img src="{{ .image }}" class="border-radius" alt="{{ .title }}">
 
         {{ end }}
         {{ if .title }}
@@ -24,7 +24,7 @@
       <div>
         {{ if .image }}
 
-        <img src="{{ .image }}" alt="{{ .title }}">
+        <img src="{{ .image }}" class="border-radius" alt="{{ .title }}">
 
         {{ end }}
         {{ if .title }}
