feat: update blog styles

--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -1,4 +1,4 @@
-<section class="blog">
+<section class="blog-list">
   <div class="container">
     <h2 class="title">
       {{ i18n "blog" }}
@@ -18,9 +18,9 @@
         <ul class="glide__slides">
           {{ range ( where .Site.RegularPages "Section" "blog").ByDate.Reverse | first 4 }}
           <li class="glide__slide">
-            <div class="post">
-              <div class="post__image">
-                <a href="{{ .Permalink }}">
+            <a href="{{ .Permalink }}" class="text-decor--none">
+              <div class="post">
+                <div class="post__image">
                   <img class="" src="{{ .Params.Image | relURL }}" alt="{{ .Title }}">
                   <div class="img-subtitle">
                     {{ range .Params.authors | first 1 }}
@@ -28,17 +28,14 @@
                     {{end}}
                     <p class="date"> {{ .Params.Date.Format "01/02/2006" }}</p>
                   </div>
-                </a>
+                </div>
+
+                <div class="post__title ">
+                  <h2 class="heading-5"> {{ .Title }} </h2>
+                </div>
+
               </div>
-
-              <div class="post__title text-decor--none">
-                <a href="{{ .Permalink }}" class="text-decor--none">
-                  <h2 class="heading-4"> {{ .Title }} </h2>
-                </a>
-              </div>
-
-            </div>
-
+            </a>
           </li>
           {{end}}
         </ul>
