--- a/source/stylesheets/partials/_blog.scss
+++ b/source/stylesheets/partials/_blog.scss
@@ -1,4 +1,12 @@
+.blog-list {
+  a {
+    text-decoration: none;
 
+    &:hover {
+      color: palette('gray');
+    }
+  }
+}
 
 .post {
   display: flex;
@@ -31,13 +39,6 @@
     height: 250px;
   }
 
-  a {
-    display: block;
-
-    width: 100%;
-    height: 100%;
-  }
-
   img {
     position: absolute;
     top: 0;
@@ -60,7 +61,7 @@
     width: 80%;
     max-width: 300px;
 
-    padding: 8px;
+    padding: 4px;
 
     text-decoration: none;
 
@@ -97,7 +98,7 @@
   }
 }
 
-.post__title{
+.post__title {
   text-align: center;
 }
 
