--- a/source/stylesheets/partials/_blog.scss
+++ b/source/stylesheets/partials/_blog.scss
@@ -13,10 +13,10 @@
 
   flex-direction: column;
 
-  margin-bottom: 32px;
+  margin-bottom: to-rem(32px);
 
   @media screen and (min-width: breakpoint('laptop')) {
-    margin-bottom: 80px;
+    margin-bottom: to-rem(80px);
   }
 
   &:last-of-type {
@@ -32,7 +32,7 @@
   width: 100%;
   height: 180px;
 
-  margin-bottom: 25px;
+  margin-bottom: to-rem(32px);
 
   @media screen and (min-width: breakpoint('desktop')) {
     width: 100%;
@@ -85,7 +85,7 @@
 
         vertical-align: middle;
 
-        background: palette('text','dark');
+        background: palette('text', 'dark');
 
         border-radius: 50%;
 
@@ -96,10 +96,6 @@
       }
     }
   }
-}
-
-.post__title {
-  text-align: center;
 }
 
 .blog-wrap {
@@ -119,7 +115,6 @@
     width: 100%;
   }
 }
-
 
 .sidebar-title {
   margin-bottom: 18px;
@@ -162,5 +157,4 @@
 
     content: '';
   }
-
 }
