--- a/layouts/about/list.html
+++ b/layouts/about/list.html
@@ -14,11 +14,10 @@
       <section class="section">
         <div class="container">
           <div class="two-column">
-            <div>
-              <h2 class="title">Sobre YouBet!</h2>
 
-            </div>
             <div class="rich-text">
+              <h2 class="title">{{ i18n "about" | title }}</h2>
+
               {{ .Content }}
 
             </div>
