--- a/layouts/blog/list.html
+++ b/layouts/blog/list.html
@@ -13,7 +13,7 @@
     <div class="container">
       {{ partial "breadcrumbs.html" . }}
     </div>
-    <main role="main" id="conteudo" class="internal-page">
+    <main role="main" id="conteudo" class="internal-page blog-list">
 
       <div class="container">
         <div class="blog-wrap">
