--- a/layouts/blog/single.html
+++ b/layouts/blog/single.html
@@ -76,7 +76,7 @@
       </section>
 
       {{ if .Params.relatedProjects }}
-      <aside class="blog-list">
+      <aside>
         <div class="container">
           <h2 class="title">{{ i18n "seeAlso" | title }}</h2>
           <ul class="posts">
