--- a/layouts/partials/blog.html
+++ b/layouts/partials/blog.html
@@ -1,18 +1,16 @@
 <section class="blog-list">
   <div class="container">
-    <h2 class="title">
-      {{ i18n "blog" }}
+    <h2 class="title-section">
+      {{ i18n "lastPosts" }}
     </h2>
 
     <div class="glide">
-
       <div class="glide__arrows" data-glide-el="controls">
         <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
         </button>
         <button class="glide__arrow glide__arrow--right" data-glide-dir=">">
         </button>
       </div>
-
 
       <div class="glide__track" data-glide-el="track">
         <ul class="glide__slides">
